linking libm works

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -6,7 +6,8 @@ CC = arm-none-eabi-gcc
 OBJDUMP = arm-none-eabi-objdump
 OBJCOPY = arm-none-eabi-objcopy
 CFLAGS = -ggdb3 -Os -mcpu=$(ARM_CPU) -ffunction-sections -fdata-sections
-LDFLAGS = -ggdb3 -mcpu=$(ARM_CPU) -Wl,--gc-sections
+LDFLAGS = -ggdb3 -mcpu=$(ARM_CPU) -Wl,--gc-sections --specs=nosys.specs
+LIBS = -lm
 
 OBJS = startup.o main.o accel.o led.o
 
@@ -20,7 +21,7 @@ main.elf: $(OBJS)
 	$(OBJCOPY) -O binary $< $@
 
 %.elf: linker.lds
-	$(CC) $(LDFLAGS) -Xlinker -Map=$(@:.elf=.map) -Wl,--script=linker.lds -nostartfiles -o $@ $(filter-out linker.lds,$+)
+	$(CC) $(LDFLAGS) -Xlinker -Map=$(@:.elf=.map) -Wl,--script=linker.lds -nostartfiles -o $@ $(filter-out linker.lds,$+) $(LIBS)
 	$(OBJDUMP) -xdsS $@ >$(@:.elf=.dump)
 
 %.o %.d: %.S
